--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.0.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "aws-amplify": "^5.2.7",
+    "aws-crt": "^1.15.18",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
